Added mastodon verification URL

--- a/index.Rmd
+++ b/index.Rmd
@@ -19,7 +19,9 @@ knit: (function(input, ...) {
     )
   })
 ---
- 
+
+<a rel="me" href="https://mastodon.social/@thomas_sandmann"></a>
+
 I am a Computational Biologist living in the San Francisco Bay Area. 
 Currently I work at 
 [Denali Therapeutics](https://www.denalitherapeutics.com/) in South San 
