Fixed mastodon labl

--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@ image: "profile.jpg"
 links:
   - label: Blog
     url: "https://tomsing1.github.io/blog"
-  - label: '<i class="fab fa-mastodon fa-lg"></i>'
+  - label: Mastodon
     url: "https://genomic.social/\\@thomas_sandmann"
   - label: LinkedIn
     url: "https://www.linkedin.com/in/thomas-sandmann"
